--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,6 @@
-<!-- 
-
-<h1>{{ 'greeting' | translate }}</h1>
-<p>{{ 'welcome' | translate }}</p>
-<select (change)="changeLanguage($event)">
-  <option value="en">English</option>
-  <option value="es">Español</option>
-  <option value="fr">Français</option>
-</select> -->
-
-
 <div class="container">
   <div class="card">
-    <!-- Flag at the top right corner -->
+    
     <div class="flag">
       <img [src]="getFlagImage()" alt="Country Flag" />
     </div>
@@ -25,8 +14,8 @@
       </select>
     </div>
   </div>
-  <div class="footer">
+  <!-- <div class="footer">
     <p>If you have any questions, suggestions or complaints concerning our localisation efforts,</p>
     <p>you can always contact us. We'd love to hear from you!</p>
-  </div>
+  </div> -->
 </div>
